# noir_IEEE754

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  .shellcheckrc  .sync-manifest.json  .yamllint.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  LICENSE  Nargo.toml  README.md  SEMANTIC_RELEASE.md  TESTING.md  ct.nr  gate_counts.json  package-lock.json  package.json
.claude/: README.md  settings.json
.claude/agents/: lean-proofs.md  noir-circuits.md  workspace-devops.md
.github/: noir-versions.json  test-matrix.json
.github/workflows/: auto-update-pr-branches.yml  ci.yml  claude-address-review-comments.yml  lint.yml  (+6 more)
bench/: README.md  SPIKES.md  baseline_mul_f128.json  float_conversions_latest.json  float_ops_baseline-kernels.json  float_ops_baseline-nargo-beta21.json  float_ops_latest.json  post_limb_mul_f128.json  smoke_float_ops.json  unconstrained_gate_counts.json
differential/: Cargo.toml  README.md
differential/src/: main.rs
docs/: ieee754-input-prep-redesign.md
scripts/: README.md  benchmark_cast_costs.py  benchmark_float_conversions.py  benchmark_float_ops.py  benchmark_gates.py  benchmark_primitive_ops.py  benchmark_utils.py  check_float_candidate.sh  compare_float_benchmarks.py  generate_float_vectors.py  generate_tests.py  lint_private_function_usage.py  regenerate_testfloat_corpus.sh  regenerate_tests.sh  requirements.txt  run_differential_harness.sh  test_generated_vectors.sh  test_public_api.sh  test_reference.py  test_reference_equivalence.py  test_run_testfloat_gen.py
src/: codegen.nr  lib.nr
(+131 files in other folders)
